# laserMouse

./: .gitignore  .workspace.vim  README.md
cpp/: .calibrate.hpp.swp  .ycm_extra_conf.py  CMakeLists.txt  calibrate.cc  calibrate.cpp  calibrate.hpp  config.json  detect.cpp  detect.hpp  display.cc  location.cpp  location.hpp  main.cpp  mouse_control.hpp  record.cc
cpp/include/: calibrate.hpp  communication.hpp  config.hpp  detect.hpp  location.hpp  mouse_control.hpp
cpp/src/: calibrate.cpp  detect.cpp  location.cpp  main.cpp  mouse_control.cpp
python/: main.py  requirements.txt
python/calibrate/: chessboard_calibrate.py  qr_calibrate.py
python/detect/: threshold_detector.py  yolov5_inference.py
python/mouse_control/: mouse_control.py  new_mouse_control.py
python/track/: basic_tracker.py
script/: restoreCamera.py
utils/: serial_port.cc  serial_port.hpp  test.cc
