cmake_minimum_required(VERSION 3.7)
project(openCVTest)
cmake_minimum_required(VERSION 2.8)
project(opencv_example_project)
set(CMAKE_BUILD_TYPE "Debug")
find_package(OpenCV REQUIRED)
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
if(CMAKE_VERSION VERSION_LESS "2.8.11")
    include_directories(${OpenCV_INCLUDE_DIRS})
endif()
add_executable(calibrate calibrate.cc)
add_executable(display display.cc)
add_executable(record record.cc)
target_link_libraries(calibrate ${OpenCV_LIBS})
target_link_libraries(display ${OpenCV_LIBS})
target_link_libraries(record ${OpenCV_LIBS})
